--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,14 +25,14 @@
             <input type="password" class="form-control" id="passwordLoginInput" placeholder="Password"
                    name="password" required/>
           </div>
-          <div th:if="${param.error}"
-               class="alert alert-danger col-xl-4 col-lg-4 col-md-6 col-sm-6 mx-auto mt-2" role="alert">
-            Invalid username or password.
-          </div>
-          <div th:if="${param.logout}"
-               class="alert alert-success col-xl-4 col-lg-4 col-md-6 col-sm-6 mx-auto mt-2">
-            Logout successful: you have been logged out.
-          </div>
+<!--          <div th:if="${param.error}"-->
+<!--               class="alert alert-danger col-xl-4 col-lg-4 col-md-6 col-sm-6 mx-auto mt-2" role="alert">-->
+<!--            Invalid username or password.-->
+<!--          </div>-->
+<!--          <div th:if="${param.logout}"-->
+<!--               class="alert alert-success col-xl-4 col-lg-4 col-md-6 col-sm-6 mx-auto mt-2">-->
+<!--            Logout successful: you have been logged out.-->
+<!--          </div>-->
           <div class="d-grid gap-2 col-xl-4 col-lg-4 col-md-6 col-sm-6 mx-auto">
             <button type="submit" class="btn btn-primary mt-2">Sign in</button>
           </div>
